--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/jest": "29.5.11",
+    "@types/node": "20.11.4",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "@types/commander": "^2.12.2",
-    "@types/figlet": "^1.5.8",
-    "commander": "^11.1.0",
-    "figlet": "^1.7.0"
+    "@types/commander": "2.12.2",
+    "@types/figlet": "1.5.8",
+    "commander": "11.1.0",
+    "figlet": "1.7.0"
   }
 }
